# encoins-core-v2

./: README.md  cabal.project  encoins-core-v2.cabal  hie.yaml
src/ENCOINS/Core/V2/: Script.hs
tests/: Main.hs  Test.hs
tests/Test/: Internal.hs
