cabal-version:      3.0

name:               encoins-core-v2
version:            0.1.0.0
synopsis:           The on-chain and off-chain code for the ENCOINS v2 protocol
homepage:           encoins.io
category:           Blockchain, Cryptography, Smart Contract
author:             Vladimir Sinyakov
maintainer:         team@encoins.io
license:            MIT
license-file:       LICENSE
build-type:         Simple

description:
  This package contains the on-chain and off-chain code for the ENCOINS v2 protocol. The code is written in the zkFold Symbolic framework.

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -O2
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns

library
    import: options
    exposed-modules:
      ENCOINS.Core.V2.Script
    build-depends:
      base                          >= 4.9 && < 5,
      hspec                                      ,
      QuickCheck                                 ,
      semialign                             < 1.4,
      zkfold-base                                ,
    hs-source-dirs: src

test-suite encoins-core-v2-test
    import: options
    type: exitcode-stdio-1.0
    ghc-options: -rtsopts
    main-is: Main.hs
    other-modules:
      Test
      Test.Internal
    build-depends:
      base                          >= 4.9 && < 5,
      hspec                                      ,
      encoins-core-v2                            ,
      QuickCheck                                 ,
      zkfold-base                                ,
    hs-source-dirs: tests